traversal.column.traversalbycolumn.TraversalByColumn.scala.error
Erreur de compilation :
TraversalByColumn:16: error: type mismatch;
 found   : Int
 required: String
      ecritMessage(cpt:String)
                   ^